# claude-monitor

./: .gitignore  Cargo.toml  README.md  hooks.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
plugin/: Cargo.toml
plugin/src/: main.rs
server/: Cargo.toml
server/src/: index.html  main.rs
