[package]
name = "claude-monitor-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-monitor-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
